[package]
name = "md5"
version = "0.1.0"
edition = "2024"
description = "A high-speed, no_std compatible MD5 implementation"
license = "MIT"
readme = "README.md"

[features]
default = ["std"]
std = []

[dev-dependencies]
hex = "0.4"
criterion = { version = "0.5", features = ["html_reports"] }
rustcrypto-md5 = { package = "md-5", version = "0.10" }

[[bench]]
name = "throughput"
harness = false
